# rust-tide

./: Cargo.toml  README.md  csn.json  package.json  req.http  schema.sql  sqlite.db  sqlite.db-shm  sqlite.db-wal
db/: schema.cds
src/: add_routes.rs  cds.rs  cqn.rs  cqn_to_result.rs  csn.rs  deserialize_path.rs  entity.rs  get_entities.rs  main.rs  parse_csn.rs  url_to_cqn.rs
src/add_routes/: deserialize_path.rs
src/get_entities/: parse_csn.rs
srv/: service.cds
